# RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
.claude/: CLAUDE.md
agents/: README.md
api/: __init__.py  config.py  main.py  models.py  server.py  utils.py
api/routes/: __init__.py  assessment.py  assignment.py  documents.py  health.py  lume.py  lume_test.py  query.py
api/services/rag/: __init__.py  chain.py  document_loader.py  embeddings.py  filtered_search.py  vector_store.py
deployment/: README.md
deployment/config/: nginx-rag.conf  rag.service
deployment/scripts/: 01-create-ec2.sh  02-setup-server.sh  03-copy-data.sh
docs/: EXTRACTION-HANDOFF.md  INDEX.md
logs/: extraction-log.csv
pipelines/extract-questions/: .env.example  README.md  bun.lockb  package.json
pipelines/extract-questions/src/: main.ts  validate-extraction.ts
pipelines/extract-questions/src/config/: settings.ts  types.ts
pipelines/extract-questions/src/modules/: claude-extractor.ts  csv-writer.ts  extraction-tracker.ts  few-shot-loader.ts  pdf-converter.ts  prompt-template.ts  prompt-templates.ts
pipelines/extract-questions/src/utils/: logger.ts
pipelines/index-ncert/: README.md  index.py
